--- a/Editores.html
+++ b/Editores.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Editor</title>
+    <title>Tutorial HTML</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -82,98 +82,72 @@
                 <li><a href="#ejemplos-html">Ejemplos HTML</a></li>
                 <li><a href="#editor-html">Editor HTML</a></li>
                 <li><a href="#prueba-html">Prueba HTML</a></li>
-                <li><a href="#ejercicios-html">Ejercicios HTML</a></li>
-                <li><a href="#sitio-web-html">Sitio web HTML</a></li>
-                <li><a href="#preparacion-entrevista-html">Preparación de la entrevista HTML</a></li>
-                <li><a href="#campo-entrenamiento-html">Campo de entrenamiento HTML</a></li>
-                <li><a href="#certificado-html">Certificado HTML</a></li>
-                <li><a href="#resumen-html">Resumen HTML</a></li>
-                <li><a href="#accesibilidad-html">Accesibilidad HTML</a></li>
-                <li><a href="#input-form-attributes">Input Form Attributes</a></li>
-                <li><h3>Referencias HTML</h3></li>
-                <li><a href="#lista-etiquetas-html">Lista de etiquetas HTML</a></li>
-                <li><a href="#atributos-html">Atributos HTML</a></li>
-                <li><a href="#atributos-globales-html">Atributos globales HTML</a></li>
-                <li><a href="#compatibilidad-navegador-html">Compatibilidad con navegador HTML</a></li>
-                <li><a href="#eventos-html">Eventos HTML</a></li>
-                <li><a href="#colores-html">Colores HTML</a></li>
-                <li><a href="#lienzo-html">Lienzo HTML</a></li>
-                <li><a href="#audio-video-html">Audio/vídeo HTML</a></li>
-                <li><a href="#tipos-documentos-html">Tipos de documentos HTML</a></li>
-                <li><a href="#juegos-caracteres-html">Juegos de caracteres HTML</a></li>
-                <li><a href="#codificacion-url-html">Codificación de URL HTML</a></li>
-                <li><a href="#codigos-idioma-html">Códigos de idioma HTML</a></li>
-                <li><a href="#mensajes-http">Mensajes HTTP</a></li>
-                <li><a href="#metodos-http">Métodos HTTP</a></li>
-                <li><a href="#convertidor-px-em">Convertidor de PX a EM</a></li>
-                <li><a href="#atajos-teclado">Atajos de teclado</a></li>
+                <li><h3>REFERENCIAS HTML</h3></li>
+                <li><a href="#referencia-html">Referencia HTML</a></li>
+                <li><a href="#referencia-de-etiquetas-html">Referencia de etiquetas HTML</a></li>
+                <li><a href="#referencia-de-atributos-html">Referencia de atributos HTML</a></li>
+                <li><a href="#referencia-de-eventos-html">Referencia de eventos HTML</a></li>
+                <li><a href="#colores-referencia-html">Colores referencia HTML</a></li>
+                <li><a href="#referencia-de-codigos-de-lenguaje-html">Referencia de códigos de lenguaje HTML</a></li>
+                <li><a href="#generador-metaetiquetas-html">Generador metaetiquetas HTML</a></li>
             </ul>
         </nav>
         <div class="content-container">
-            <div class="content">
-                <h1>HTML EDITOR</h1>
-                <div class="buttons">
-                    <a href="Anterior.html" class="button">❮ Anterior</a>
-                    <a href="Siguiente.html" class="button">Siguiente ❯</a>
-                </div>
-                <div class="example-container">
-                    <h2>Un editor de texto simple es todo lo que necesitas para aprender HTML.</h2>
-                    <p><strong>Aprende HTML usando Bloc de notas o TextEdit</strong></p>
-                    <p>Las páginas web se pueden crear y modificar utilizando editores HTML profesionales.</p>
-                    <p>Sin embargo, para aprender HTML, recomendamos un editor de texto simple como Notepad (PC) o TextEdit (Mac).</p>
-                    <p>Creemos que utilizar un editor de texto sencillo es una buena forma de aprender HTML.</p>
-                    <p>Siga los pasos a continuación para crear su primera página web con Notepad o TextEdit:</p>
-
-                    <h3>Paso 1: Abre el Bloc de notas (PC)</h3>
-                    <p><strong>Windows 8 o posterior:</strong></p>
-                    <p>Abra la pantalla de inicio (el símbolo de la ventana en la parte inferior izquierda de la pantalla). Escriba "Bloc de notas".</p>
-                    <p><strong>Windows 7 o anterior:</strong></p>
-                    <p>Abra Inicio > Programas > Accesorios > Bloc de notas</p>
-
-                    <h3>Paso 1: Abre TextEdit (Mac)</h3>
-                    <p>Abra Finder > Aplicaciones > TextEdit</p>
-                    <p>Cambie algunas preferencias para que la aplicación guarde los archivos correctamente. En Preferencias > Formato > elija "Texto sin formato".</p>
-                    <p>Luego, en "Abrir y guardar", marque la casilla que dice "Mostrar archivos HTML como código HTML en lugar de texto formateado".</p>
-                    <p>Abra un nuevo documento para colocar el código.</p>
-
-                    <h3>Paso 2: Escribe algo de HTML</h3>
-                    <p>Escriba o copie el siguiente código HTML en el Bloc de notas:</p>
-
-                    <pre class="code-block">
-&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-&lt;body&gt;
-&lt;h1&gt;Mi primer título&lt;/h1&gt;
-&lt;p&gt;Mi primer párrafo.&lt;/p&gt;
-&lt;/body&gt;
-&lt;/html&gt;
-                    </pre>
-
-                    <h3>Paso 3: Guarda la página HTML</h3>
-                    <p>Guarde el archivo en su computadora. Seleccione Archivo > Guardar como en el menú del Bloc de notas.</p>
-                    <p>Nombra el archivo "index.htm" y establece la codificación en UTF-8 (que es la codificación preferida para archivos HTML).</p>
-
-                    <h3>Paso 4: Ve la página HTML en tu navegador</h3>
-                    <p>Abra el archivo HTML guardado en su navegador favorito (haga doble clic en el archivo o haga clic derecho y seleccione "Abrir con").</p>
-                    <p>El resultado se parecerá mucho a esto:</p>
-
-                    <div class="example-result">
-                        <h1>Mi primer título</h1>
-                        <p>Mi primer párrafo.</p>
-                    </div>
-
-                    <h3>Editor en línea de W3Schools: "Pruébelo usted mismo"</h3>
-                    <p>Con nuestro editor en línea gratuito, puede editar el código HTML y ver el resultado en su navegador.</p>
-                    <p>Es la herramienta perfecta cuando quieres probar el código rápidamente. También tiene codificación de colores y la capacidad de guardar y compartir código con otros.</p>
-                </div>
+            <h1>HTML Editors</h1>
+           
+            <div class="buttons">
+                <a href="introduccion.html" class="button">❮ Anterior</a>
+                <a href="Basico.html" class="button">Siguiente ❯</a>
             </div>
+ <p>En este capítulo mostraremos algunos ejemplos básicos de HTML</p>
+ <p>No se preocupe si utilizamos etiquetas que aún no conoce.</p>
+      
+               <h2>HTML Editors</h2>
+               <span class="mos1"> Todos los documentos HTML deben comenzar con una declaración de tipo de documento:&lt;!DOCTYPE html&gt;</span><br>
+               <p> </p>
+               <span class="mos1"> El documento HTML en sí comienza con &lt;  html&gt; y termina con &lt;/html&gt;</span><br>
+               <p> </p>
+               <span class="mos1">La parte visible del documento HTML está entre &lt; body &gt; y  &lt; /body&gt;</span><br>
+            <div class="example-container">
+                <h2>Ejemplo de Imagen</h2>
+                <img src="path_to_image.png" alt="Ejemplo de Imagen" class="bordered-image">
+            </div>
+
+            <div class="buttons">
+                <a href="#" class="button">Botón 1</a>
+                <a href="#" class="button">Botón 2</a>
+            </div>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Encabezado 1</th>
+                        <th>Encabezado 2</th>
+                        <th>Encabezado 3</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Fila 1 Columna 1</td>
+                        <td>Fila 1 Columna 2</td>
+                        <td>Fila 1 Columna 3</td>
+                    </tr>
+                    <tr>
+                        <td>Fila 2 Columna 1</td>
+                        <td>Fila 2 Columna 2</td>
+                        <td>Fila 2 Columna 3</td>
+                    </tr>
+                    <tr>
+                        <td>Fila 3 Columna 1</td>
+                        <td>Fila 3 Columna 2</td>
+                        <td>Fila 3 Columna 3</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
-
-    <div class="footer">
-        Creado por: EDWIN ALEXANDER CHOEZ DOMINGUEZ<br>
-        Instituto Tecnológico Superior del Azuay con Condición Universitario<br>
-        <a href="http://www.tecazuay.edu.ec" target="_blank">www.tecazuay.edu.ec</a>
-    </div>
+    <footer class="footer">
+        <p>&copy; 2024 Tu Nombre. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
