--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
             <ul>
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="introduccion.html">INTRODUCCIÓN</a></li>
-                <li><a href="editores.html">EDITORES HTML</a></li>
-                <li><a href="#atributos-html">Atributos HTML</a></li>
-                <li><a href="#encabezados-html">Encabezados HTML</a></li>
-                <li><a href="#parrafos-html">Párrafos HTML</a></li>
-                <li><a href="#estilos-html">Estilos HTML</a></li>
-                <li><a href="#formato-html">Formato HTML</a></li>
-                <li><a href="#citas-html">Citas HTML</a></li>
-                <li><a href="#comentarios-html">Comentarios HTML</a></li>
-                <li><a href="#colores-html">Colores HTML</a></li>
+                <li><a href="Editores.html">EDITORES HTML</a></li>
+                <li><a href="Basico.html">Basico Html</html></a></li>
+                <li><a href="Elementos.html">Elementos Html</html></a></li>
+                <li><a href="Atributos.html">Atributos HTML</a></li>
+                <li><a href="Encabezado.html">Encabezados HTML</a></li>
+                <li><a href="Parrafos.html">Párrafos HTML</a></li>
+                <li><a href="Estilos.html">Estilos HTML</a></li>
+                <li><a href="Fromato_testo.html">Formato HTML</a></li>
+                <li><a href="Citas.html">Citas HTML</a></li>
+                <li><a href="Comentarios.html">Comentarios HTML</a></li>
+                <li><a href="Colores.html">Colores HTML</a></li>
                 <li><a href="#css-html">CSS HTML</a></li>
                 <li><a href="#enlaces-html">Enlaces HTML</a></li>
                 <li><a href="#imagenes-html">Imágenes HTML</a></li>
