--- a/Comentarios.html
+++ b/Comentarios.html
@@ -24,8 +24,6 @@
             <ul>
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="introduccion.html">INTRODUCCIÓN</a></li>
-                <li><a href="index.html">INICIO</a></li>
-                <li><a href="introduccion.html">INTRODUCCIÓN</a></li>
                 <li><a href="Editores.html">EDITORES HTML</a></li>
                 <li><a href="Basico.html">Basico Html</html></a></li>
                 <li><a href="Elementos.html">Elementos Html</html></a></li>
@@ -111,83 +109,70 @@
             </ul>
         </nav>
         <div class="content-container">
-            <h1>Ejemplos básicos de HTML</h1>
+            <h1>Comentarios de Html</h1>
             <div class="buttons">
-                <a href="Editores.html" class="button">❮ Anterior</a>
-                <a href="Elementos.html" class="button">Siguiente ❯</a>
+                <a href="Fromato_testo.html" class="button">❮ Anterior</a>
+                <a href="Colores.html" class="button">Siguiente ❯</a>
 
-                <p></p>
-                <p>En este capítulo mostraremos algunos ejemplos básicos de HTML.</p>
-                <p></p>
-                <p>No se preocupe si utilizamos etiquetas que aún no conoce.</p>
-                <h4>HTML Documents</h4>
-                <p>Todos los documentos HTML deben comenzar con una declaración de tipo de documento:
+            </div> 
+            <p>Los comentarios HTML no se muestran en el navegador, pero pueden ayudar a documentar su código fuente
+                HTML.</p>
+            <hr>
+            <h3>Etiqueta de comentario HTML </h3>
+            <p>Puede agregar comentarios a su fuente HTML utilizando la siguiente sintaxis:</p>
+            <pre><code>&lt;!-- Escriba sus comentarios aquí --&gt;</code></pre>
 
-                    <img src="Imagen12.png" alt="Ejemplo de imagen" class="bordered-image">
-                    <!DOCTYPE html>.
-                </p>
-
+            <p>Tenga en cuenta que hay un signo de exclamación (!) en la etiqueta de inicio, pero no en la etiqueta
+                final.</p>
+            <div id="nota">
+                <p class="inline">
+                <h3 class="inline">Nota: </h3>Los comentarios no los muestra el navegador, pero pueden ayudar a
+                documentar el código fuente HTML.</p>
             </div>
-           <h3>La declaración < !DOCTYPE ></h3>
-           <p>La declaración < !DOCTYPE> representa el tipo de documento y ayuda a los navegadores a mostrar las páginas web correctamente.</p>
-           <p></p>
-           <p>Sólo debe aparecer una vez, en la parte superior de la página (antes de cualquier etiqueta HTML).</p>
-           <p></p>
-           <p>La declaración < !DOCTYPE> no distingue entre mayúsculas y minúsculas.</p>
-           <p></p>
-           <p>La declaración < !DOCTYPE> para HTML5 es:</p>
-           <p></p>
-           <img src="Imagen13.png" alt="Ejemplo de imagen" class="bordered-image">
-           <h3>Encabezados HTML</h3>
-           <p>Los encabezados HTML se definen con las etiquetas &lt;h1&gt; a &lt;h6&gt;.
-            <p></p>
-               <br> &lt;h1&gt;define el encabezado más importante. &lt;h6&gt; define el encabezado menos importante:
-           </p>
-           <img src="Imagen14.png" alt="Ejemplo de imagen" class="bordered-image">
-           <h3>Párrafos HTML </h3>
-           <p></p>
-           <p>Los párrafos HTML se definen con la &lt;p&gt; etiqueta: </p>
-           <p></p>
-           <img src="Imagen15.png" alt="Ejemplo de imagen" class="bordered-image">
-           
-           <h3>Enlaces HTML </h3>
-           <p></p>
-           <p>Los enlaces HTML se definen con la &lt;a&gt; etiqueta: </p>
-           <img src="Imagen16.png" alt="Ejemplo de imagen" class="bordered-image">
-           <p></p>
-           <p>El destino del enlace se especifica en el hrefatributo.
-            <p></p>
-               <br>Los atributos se utilizan para proporcionar información adicional sobre los elementos HTML.
-               <p></p>
-               <br>Aprenderá más sobre los atributos en un capítulo posterior.
-           </p>
-
-           <h3>Imágenes HTML </h3>
-
-           <p>Las imágenes HTML se definen con la &lt;img&gt; etiqueta.
-               <br>El archivo de origen ( src), el texto alternativo ( alt), widthy height se proporcionan como
-               atributos:
-           </p>
-           <h3>Cómo ver el código fuente HTML </h3>
-           <p></p>
-           <p>¿Alguna vez has visto una página web y te has preguntado "Oye, ¿cómo lo hicieron?"</p>
-           <h4>Ver código fuente HTML: </h4>
-           <p>Haga clic en CTRL + U en una página HTML o haga clic derecho en la página y seleccione "Ver código fuente
-               de la página". Se abrirá una nueva pestaña que contiene el código fuente HTML de la página.</p>
-           <h4>Inspeccionar un elemento HTML: </h4>
-           <p>Haz clic derecho en un elemento (o en un área en blanco) y elige "Inspeccionar" para ver de qué están
-               compuestos los elementos (verás tanto el HTML como el CSS). También puedes editar el HTML o el CSS sobre
-               la marcha en el panel Elementos o Estilos que se abre.</p>
-           <hr>
-           <h3>Ejercicios HTML</h3>
-           <img src="Imagen17.png" alt="Ejemplo de imagen" class="bordered-image">
+            <hr>
+            <h3> Añadir comentarios</h3>
+            <p>Con los comentarios puedes colocar notificaciones y recordatorios en tu código HTML:</p>
+            <pre><code>&lt;!-- This is a comment --&gt;
+                &lt;p&gt;This is a paragraph.&lt;/p&gt;
+                &lt;!-- Remember to add more information here --&gt;</code></pre>
+            <hr>
+            <h3>Ocultar contenido</h3>
+            <p>Los comentarios se pueden utilizar para ocultar contenido.</p>
+            <p>Esto puede ser útil si ocultas contenido temporalmente:</p>
+            <pre><code>&lt;p&gt;This is a paragraph.&lt;/p&gt;
+                &lt;!-- &lt;p&gt;This is another paragraph&lt;/p&gt; --&gt;
+                &lt;p&gt;This is a paragraph too.&lt;/p&gt;</code></pre>
+            <p>También puedes ocultar más de una línea. Todo lo que esté entre &lt;!--y --&gt; se ocultará de la
+                pantalla.</p>
+            <pre><code>&lt;p&gt;This is a paragraph.&lt;/p&gt;
+                    &lt;!--
+                    &lt;p&gt;Look at this cool image:&lt;/p&gt;
+                    &lt;img border="0" src="pic_trulli.jpg" alt="Trulli"&gt;
+                    --&gt; 
+                    &lt;p&gt;This is a paragraph too.&lt;/p&gt;</code></pre>
+            <p>Los comentarios también son excelentes para depurar HTML, porque puedes comentar líneas de código HTML,
+                una a la vez, para buscar errores.</p>
+            <hr>
+            <h3>Ocultar contenido en línea</h3>
+            <p>Los comentarios se pueden utilizar para ocultar partes en medio del código HTML.</p>
+            <pre><code>&lt;p&gt;This &lt;!-- great text --&gt; is a paragraph.&lt;/p&gt;</code></pre>
+            <img src="Imagen37.png" alt="Ejemplo de imagen" class="bordered-image">
+            <h4>Ocultar contenido en línea</h4>
+            <img src="Imagen38.png" alt="Ejemplo de imagen" class="bordered-image">
+             <h4>Ejercicios HTML</h4>
+             <img src="Imagen39.png" alt="Ejemplo de imagen" class="bordered-image">
+             <div class="buttons">
+                <a href="Fromato_testo.html" class="button">❮ Anterior</a>
+                <a href="Colores.html" class="button">Siguiente ❯</a>
+            </div>
+             </div>
         </div>
-    </div>
-    <div class="footer">
-        Creado por: EDWIN ALEXANDER CHOEZ DOMINGUEZ<br>
-        Instituto Tecnológico Superior del Azuay con Condición Universitario<br>
-        <a href="http://www.tecazuay.edu.ec" target="_blank">www.tecazuay.edu.ec</a>
-    </div>
-</body>
+        <div class="footer">
+            Creado por: EDWIN ALEXANDER CHOEZ DOMINGUEZ<br>
+            Instituto Tecnológico Superior del Azuay con Condición Universitario<br>
+            <a href="http://www.tecazuay.edu.ec" target="_blank">www.tecazuay.edu.ec</a>
+        </div>
+         
+    </body>
 
 </html>
