--- a/introduccion.html
+++ b/introduccion.html
@@ -24,15 +24,17 @@
             <ul>
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="introduccion.html">INTRODUCCIÓN</a></li>
-                <li><a href="editores.html">EDITORES HTML</a></li>
-                <li><a href="#atributos-html">Atributos HTML</a></li>
-                <li><a href="#encabezados-html">Encabezados HTML</a></li>
-                <li><a href="#parrafos-html">Párrafos HTML</a></li>
-                <li><a href="#estilos-html">Estilos HTML</a></li>
-                <li><a href="#formato-html">Formato HTML</a></li>
-                <li><a href="#citas-html">Citas HTML</a></li>
-                <li><a href="#comentarios-html">Comentarios HTML</a></li>
-                <li><a href="#colores-html">Colores HTML</a></li>
+                <li><a href="Editores.html">EDITORES HTML</a></li>
+                <li><a href="Basico.html">Basico Html</html></a></li>
+                <li><a href="Elementos.html">Elementos Html</html></a></li>
+                <li><a href="Atributos.html">Atributos HTML</a></li>
+                <li><a href="Encabezado.html">Encabezados HTML</a></li>
+                <li><a href="Parrafos.html">Párrafos HTML</a></li>
+                <li><a href="Estilos.html">Estilos HTML</a></li>
+                <li><a href="Fromato_testo.html">Formato HTML</a></li>
+                <li><a href="Citas.html">Citas HTML</a></li>
+                <li><a href="Comentarios.html">Comentarios HTML</a></li>
+                <li><a href="Colores.html">Colores HTML</a></li>
                 <li><a href="#css-html">CSS HTML</a></li>
                 <li><a href="#enlaces-html">Enlaces HTML</a></li>
                 <li><a href="#imagenes-html">Imágenes HTML</a></li>
@@ -59,56 +61,51 @@
                 <li><a href="#juegos-caracteres-html">Juegos de caracteres HTML</a></li>
                 <li><a href="#codificacion-url-html">Codificación de URL HTML</a></li>
                 <li><a href="#html-xhtml">HTML frente a XHTML</a></li>
-                <li><h3>Formularios HTML</h3></li>
+                <li>
+                    <h3>Formularios HTML</h3>
+                </li>
                 <li><a href="#html-forms">HTML Forms</a></li>
                 <li><a href="#html-form-attributes">HTML Form Attributes</a></li>
                 <li><a href="#html-form-elements">HTML Form Elements</a></li>
                 <li><a href="#html-input-types">HTML Input Types</a></li>
-                <li><h3>Gráficos HTML</h3></li>
+                <li>
+                    <h3>Gráficos HTML</h3>
+                </li>
                 <li><a href="#lienzo-html">Lienzo HTML</a></li>
                 <li><a href="#htmlsvg">HTMLSVG</a></li>
-                <li><h3>Medios HTML</h3></li>
+                <li>
+                    <h3>Medios HTML</h3>
+                </li>
                 <li><a href="#html-input-attributes">HTML Input Attributes</a></li>
                 <li><a href="#medios-html">Medios HTML</a></li>
                 <li><a href="#video-html">Vídeo HTML</a></li>
                 <li><a href="#audio-html">Audio HTML</a></li>
                 <li><a href="#complementos-html">Complementos HTML</a></li>
                 <li><a href="#youtube-html">YouTube HTML</a></li>
-                <li><h3>API HTML</h3></li>
+                <li>
+                    <h3>API HTML</h3>
+                </li>
                 <li><a href="#geolocalizacion-html">Geolocalización HTML</a></li>
                 <li><a href="#arrastrar-soltar-html">Arrastrar/soltar HTML</a></li>
                 <li><a href="#almacenamiento-web-html">Almacenamiento web HTML</a></li>
                 <li><a href="#trabajadores-web-html">Trabajadores web HTML</a></li>
                 <li><a href="#html-sse">HTML SSE</a></li>
-                <li><h3>Ejemplos HTML</h3></li>
+                <li>
+                    <h3>Ejemplos HTML</h3>
+                </li>
                 <li><a href="#ejemplos-html">Ejemplos HTML</a></li>
                 <li><a href="#editor-html">Editor HTML</a></li>
                 <li><a href="#prueba-html">Prueba HTML</a></li>
-                <li><a href="#ejercicios-html">Ejercicios HTML</a></li>
-                <li><a href="#sitio-web-html">Sitio web HTML</a></li>
-                <li><a href="#preparacion-entrevista-html">Preparación de la entrevista HTML</a></li>
-                <li><a href="#campo-entrenamiento-html">Campo de entrenamiento HTML</a></li>
-                <li><a href="#certificado-html">Certificado HTML</a></li>
-                <li><a href="#resumen-html">Resumen HTML</a></li>
-                <li><a href="#accesibilidad-html">Accesibilidad HTML</a></li>
-                <li><a href="#input-form-attributes">Input Form Attributes</a></li>
-                <li><h3>Referencias HTML</h3></li>
-                <li><a href="#lista-etiquetas-html">Lista de etiquetas HTML</a></li>
-                <li><a href="#atributos-html">Atributos HTML</a></li>
-                <li><a href="#atributos-globales-html">Atributos globales HTML</a></li>
-                <li><a href="#compatibilidad-navegador-html">Compatibilidad con navegador HTML</a></li>
-                <li><a href="#eventos-html">Eventos HTML</a></li>
-                <li><a href="#colores-html">Colores HTML</a></li>
-                <li><a href="#lienzo-html">Lienzo HTML</a></li>
-                <li><a href="#audio-video-html">Audio/vídeo HTML</a></li>
-                <li><a href="#tipos-documentos-html">Tipos de documentos HTML</a></li>
-                <li><a href="#juegos-caracteres-html">Juegos de caracteres HTML</a></li>
-                <li><a href="#codificacion-url-html">Codificación de URL HTML</a></li>
-                <li><a href="#codigos-idioma-html">Códigos de idioma HTML</a></li>
-                <li><a href="#mensajes-http">Mensajes HTTP</a></li>
-                <li><a href="#metodos-http">Métodos HTTP</a></li>
-                <li><a href="#convertidor-px-em">Convertidor de PX a EM</a></li>
-                <li><a href="#atajos-teclado">Atajos de teclado</a></li>
+                <li>
+                    <h3>REFERENCIAS HTML</h3>
+                </li>
+                <li><a href="#referencia-html">Referencia HTML</a></li>
+                <li><a href="#referencia-de-etiquetas-html">Referencia de etiquetas HTML</a></li>
+                <li><a href="#referencia-de-atributos-html">Referencia de atributos HTML</a></li>
+                <li><a href="#referencia-de-eventos-html">Referencia de eventos HTML</a></li>
+                <li><a href="#colores-referencia-html">Colores referencia HTML</a></li>
+                <li><a href="#referencia-de-codigos-de-lenguaje-html">Referencia de códigos de lenguaje HTML</a></li>
+                <li><a href="#generador-metaetiquetas-html">Generador metaetiquetas HTML</a></li>
             </ul>
         </nav>
         <div class="content-container">
@@ -187,7 +184,87 @@
                 <p>El objetivo de un navegador web (Chrome, Edge, Firefox, Safari) es leer documentos HTML y mostrarlos correctamente.</p>
                 <p>Un navegador no muestra las etiquetas HTML, pero las utiliza para determinar cómo mostrar el documento:</p>
                 <img src="Imagen3.png" alt="Ejemplo de imagen" class="bordered-image">
-                <h3>¿Qué es un elemento HTML?</h3>
+                <h3>Estructura de la página HTML</h3>
+                <p>A continuación se muestra una visualización de la estructura de una página HTML:</p>
+                <img src="imagen7.png" alt="Ejemplo de imagen" class="bordered-image">
+                <P> </P>
+                <p> </p>
+                <div class="nota">
+                    <span class="tag">NOTA: El contenido dentro de la sección &lt;cuerpo&gt; se mostrará en un navegador. El contenido dentro del elemento &lt;title&gt; se mostrará en la barra de título del navegador o en la pestaña de la página.</span>
+                </div>
+                <h3>Historia HTML</h3>
+                <p>Desde los primeros días de la World Wide Web, ha habido muchas versiones de HTML:</p>
+
+                <table class="historia-html">
+                    <thead>
+                        <tr>
+                            <th>Año</th>
+                            <th>Evento</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1989</td>
+                            <td>Tim Berners-Lee inventó www</td>
+                        </tr>
+                        <tr>
+                            <td>1991</td>
+                            <td>Tim Berners-Lee inventó HTML</td>
+                        </tr>
+                        <tr>
+                            <td>1993</td>
+                            <td>Dave Raggett redactó HTML+</td>
+                        </tr>
+                        <tr>
+                            <td>1995</td>
+                            <td>El Grupo de Trabajo HTML definió HTML 2.0</td>
+                        </tr>
+                        <tr>
+                            <td>1997</td>
+                            <td>Recomendación del W3C: HTML 3.2</td>
+                        </tr>
+                        <tr>
+                            <td>1999</td>
+                            <td>Recomendación del W3C: HTML 4.01</td>
+                        </tr>
+                        <tr>
+                            <td>2000</td>
+                            <td>Recomendación del W3C: XHTML 1.0</td>
+                        </tr>
+                        <tr>
+                            <td>2008</td>
+                            <td>Primer borrador público de WHATWG HTML5</td>
+                        </tr>
+                        <tr>
+                            <td>2012</td>
+                            <td>WHATWG HTML5 Estándar de vida</td>
+                        </tr>
+                        <tr>
+                            <td>2014</td>
+                            <td>Recomendación del W3C: HTML5</td>
+                        </tr>
+                        <tr>
+                            <td>2016</td>
+                            <td>Recomendación candidata del W3C: HTML 5.1</td>
+                        </tr>
+                        <tr>
+                            <td>2017</td>
+                            <td>Recomendación del W3C: HTML5.1 2.ª edición</td>
+                        </tr>
+                        <tr>
+                            <td>2017</td>
+                            <td>Recomendación del W3C: HTML5.2</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="nota">
+                    <span  class="tag"> Este tutorial sigue el último estándar HTML5.
+                    </span>
+                </div>
+                <div class="buttons">
+                    <a href="index.html" class="button">❮ Anterior</a>
+                    <a href="Editores.html" class="button">Siguiente ❯</a>
+                </div>
             </div>
              
         </div>
