--- a/introduccion.html
+++ b/introduccion.html
@@ -13,10 +13,11 @@
         <h1>TUTORIAL HTML</h1>
     </div>
     <nav class="menu">
-        <ul>
-            <li><a href="index.html">INICIO</a></li>
-            <li><a href="introduccion.html">INTRODUCCIÓN</a></li>
-            <li><a href="editores.html">EDITORES HTML</a></li>
+        <ul <li><a href="inicio.html">Inicio</a></li>
+            <li><a href="introduccion.html">HTML</a></li>
+            <li><a href="#">CSS</a></li>
+            <li><a href="#">JAVA SCRIPT</a></li>
+            <li><a href="#">PHP</a></li>
         </ul>
     </nav>
     <div class="main-container">
